# bordeaux-building-clustering

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  clustering_hdbscan_v2.py  clustering_run_v2.py  clustering_run_v4.py  config.yaml  describe_clusters.py  enrich_insee.py  first_run.py  generate_report.py  generate_report_v2.py  generate_report_v3.py  generate_report_v4.py  index.html  make_map.py  make_map_v2.py  make_map_v3.py  make_parcellaire.py  make_webmap_satellite.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: sources.md  v3_cluster_1.geojson  v3_cluster_11.geojson  v3_cluster_13.geojson  v3_cluster_14.geojson  v3_cluster_4.geojson  v3_cluster_6.geojson  v3_cluster_7.geojson  v3_cluster_8.geojson  v3_parcelles_cluster_10.geojson  v3_parcelles_cluster_11.geojson  v3_parcelles_cluster_13.geojson  v3_parcelles_cluster_14.geojson  v3_parcelles_cluster_4.geojson  v3_parcelles_cluster_6.geojson  v3_parcelles_cluster_7.geojson  v3_parcelles_cluster_8.geojson  v4_cluster_0.geojson  v4_cluster_1.geojson  v4_cluster_2.geojson  v4_cluster_3.geojson  v4_cluster_4.geojson  v4_cluster_5.geojson  v4_cluster_6.geojson  v4_cluster_7.geojson  v4_cluster_8.geojson  v4_cluster_9.geojson  v4_parcelles_cluster_0.geojson  v4_parcelles_cluster_1.geojson  v4_parcelles_cluster_2.geojson  v4_parcelles_cluster_3.geojson  v4_parcelles_cluster_4.geojson  v4_parcelles_cluster_5.geojson  v4_parcelles_cluster_6.geojson  v4_parcelles_cluster_7.geojson  v4_parcelles_cluster_8.geojson  v4_parcelles_cluster_9.geojson
docs/: data_dictionary.md  methodology.md
(+59 files in other folders)
